<resources>
    <string name="app_name">Cooleaf</string>
    <string name="action_settings">Settings</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="emailExample">Email</string>
    <string name="passwordExample">Password</string>
    <string name="usernameExample">Name</string>
    <string name="signupButton">Sign Up</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error">Please make sure you enter a email or password.</string>
    <string name="logout_label">Logout</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error">Your device is not connected to the Internet.</string>
    <string name="termsAndAgreement">By signing up you accept the <u>Terms of Service</u>.</string>
    <string name="loginButton">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="basic_information">Basic Information</string>
    <string name="uploadProfilePicture">Upload Profile Picture</string>
    <string name="fullName">Full Name</string>
    <string name="generalError">Something went wrong</string>
    <string name="nextAction">Next</string>
    <string name="doneAction">Done</string>
    <string name="username">New Username</string>
    <string name="new_password">Password</string>
    <string name="check_tags">Please edit your tags</string>
    <string name="interestsTitle">Pick Your Interests</string>
    <string name="profile_information">Profile Information</string>
    <string name="registration_check_error">Please make sure you enter all your details.</string>
    <string name="registration_fields_check">Please make sure you enter a password.</string>
    <string name="selectTagsFromList">Pick Your Structure Tags</string>
    <string name="interests_check">Please pick your Interests</string>
    <string name="select">Select</string>
    <string name="personName">Person Name</string>
    <string name="personTitles">Title</string>
    <string name="personRewards">Rewards: 0</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="logoutAlert">Logged Out</string>
    <string name="dashboardTitle">Home</string>
    <string name="eventsTitle">My Events</string>
    <string name="personNameDashboard">Hello,</string>
    <string name="detailDescription">Description</string>
    <string name="participants">Participants</string>
    <string name="date">Date</string>
    <string name="peopleTitle">People</string>
    <string name="structure_tags">Tags</string>
    <string name="department">Department</string>
    <string name="location">Location</string>
    <string name="interestGroups">Interest Groups</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="termsOfService">Terms of Service</string>
    <string name="termsOfUseTitle">TERMS OF USE</string>
    <string name="termsOfUseDetail">\t\t\t\tBy using Cooleaf.com, Users agree to be legally bound by these terms, which shall take effect immediately. If User does not agree to be legally bound by all the following Terms and Conditions, please do not access and/or use Cooleaf.com. Cooleaf may change these Terms and Conditions at any time. \n\n\t\t\t\tUser continued use of Cooleaf.com after changes have been made to the Terms mean that User agrees to be legally bound by these updated or amended terms. User may not copy, reproduce, republish, download, post, broadcast, transmit, make available to the public, or otherwise use Cooleaf.com content (inclusive of text, images, URLs, contact information, pricing information, scheduling information, etc.) in any way except for User own personal, non-commercial use. \n\n\t\t\t\tUser agrees to use Cooleaf.com only for lawful purposes and agrees to not use Cooleaf in any way that will infringe upon the use of any other user. User use of Cooleaf.com is intended for personal, noncommercial use to make legitimate and legal purchases for the programs offered. User agrees not to make fraudulent bookings on Cooleaf.com. User agrees not to use robots or other automated means to access this site, unless specifically permitted by Cooleaf.</string>
    <string name="userAccountsTitle">USER ACCOUNTS</string>
    <string name="userAccountsDetail">\t\t\t\tWithout limiting other remedies, Cooleaf at any point may limit, suspend or terminate user account, prohibit access to Cooleaf.com and its content, and take the technical and legal steps to keep users off the site if Cooleaf believes the user is creating problems or possible legal liabilities, infringing upon the intellectual property rights of third parties, or acting inconsistently with the Terms and Conditions specified by Cooleaf. \n\n\t\t\t\tCooleaf at any time may suspend or terminate accounts of users who may be repeat infringers of intellectual property rights of third parties. Cooleaf reserves the right to cancel unconfirmed accounts or accounts that have been inactive for a long time, or to modify or discontinue Cooleaf products, programs or tools.</string>
    <string name="bookingsModificationsTitle">BOOKINGS, MODIFICATIONS, AND AMENDMENTS</string>
    <string name="bookingsModificationsDetail">\t\t\t\tUser agrees that all transactions are non-cancelable and non-refundable Unless otherwise stated within the Program description itself, all purchases made through Cooleaf for programs with flexible start dates expire within ninety days of purchase date of said program. \n\n\t\t\t\tIf a particular program purchased by User is discontinued for any reason by Provider, Provider and User shall be responsible for settlement of any disputes arising from said scenario (i.e. refunds, even exchanges, etc) User agrees to accept all of the terms and conditions when User agrees to book and pay for a Service on Cooleaf. Terms and conditions include those embodied within Terms of Service as well as those embodied within specific Program listings and instructions. When User books and pays for a Program on Cooleaf, User agrees to comply with the Provider’s specific rules and regulations as applicable. \n\n\t\t\t\tThe Programs offered on Cooleaf are offered directly by the Provider named on Cooleaf (“Provider”). Cooleaf is not responsible or liable for any information on its Service listings or company profiles. Cooleaf is not responsible for any changes or cancellations made to bookings by the Provider. Cooleaf reserves the right to cancel or change any purchased program at any time, for any reason.</string>
    <string name="pricingTitle">PRICING AND INCLUSIONS/EXCLUSIONS</string>
    <string name="pricingDetail">\t\t\t\tPrices listed on Cooleaf.com are per person unless otherwise specified by the Provider. Prices are based in USD unless otherwise specified on the Service listing. All prices are subject to change without notice, until a purchase has been completed. Unless otherwise specified, prices do not include any local taxes or use-fees, including foreign departure, security, port charges, park   fees, customs, immigration, agricultural, passenger-facility charges or international transportation tax. Prices do not include tips/gratuities to tour directors, drivers or local guides; passport and visa fees; baggage and personal insurance; any items of a personal nature; and any beverages or food not specifically listed under “Inclusions” on the product pages of Cooleaf.com.</string>
    <string name="paymentsTitle">PAYMENTS, CANCELLATIONS AND DISPUTES</string>
    <string name="paymentsDetail">\t\t\t\tCooleaf accepts the following credit cards: Visa, Mastercard, American Express and Discover. Cooleaf does not charge buyers any service fee for processing credit card payments. A full payment by credit card is required to make a reservation on Cooleaf. Payments will be listed as COOLEAF on the credit card statement. Cooleaf is not responsible or liable for any refunds or cancellations for booked Programs. Refunds and cancellations are managed by the Providers who provide the booked Programs.</string>
    <string name="rewardsTitle">REWARDS</string>
</resources>