<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootViewBasicInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cooleafWhite"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/eventCard"
        android:elevation="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <zkhaider.com.cooleaf.ui.rippleview.RippleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_image_button">

                <ImageButton
                    android:id="@+id/profileUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/round_image_button"
                    android:elevation="0dp"
                    android:src="@drawable/ic_profile_placeholder" />

            </zkhaider.com.cooleaf.ui.rippleview.RippleView>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|right"
                android:src="@drawable/ic_fab_icon" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/uploadProfilePicture"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/basicInfoDynamicLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/basic_information" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                app:floatingLabel="highlight"
                app:floatingLabelText="@string/usernameExample" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/basicInfoPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:floatingLabel="highlight"
                app:floatingLabelText="@string/passwordExample" />


        </LinearLayout>


    </ScrollView>

    <View
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim_foreground_disabled_material_light"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>

</LinearLayout>

